--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "svelte-tailwindcss-electron-starter",
-  "version": "1.0.0",
+  "name": "cream-dev-svelte-tailwindcss-electron-starter",
+  "description": "A very basic Electron starter implementing Svelte and TailwindCSS for reactive frontend.",
+  "version": "1.0.1",
   "main": "./src/electron.js",
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.0.5",
-    "@rollup/plugin-replace": "^2.3.0",
-    "autoprefixer": "^9.7.4",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^7.0.26",
-    "postcss-import": "^12.0.1",
-    "rollup": "^1.29.1",
-    "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-generate-html-template": "^1.6.0",
-    "rollup-plugin-livereload": "^1.0.4",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.4",
-    "rollup-plugin-svelte": "^5.1.1",
-    "rollup-plugin-terser": "^5.2.0",
-    "svelte": "^3.17.2",
-    "sirv-cli": "^0.4.5",
-    "tailwindcss": "^1.1.4",
-    "electron": "^7.1.11",
+    "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-replace": "^2.3.1",
+    "autoprefixer": "^9.7.5",
     "chokidar": "^3.3.1",
-    "cross-env": "^7.0.0"
+    "cross-env": "^7.0.2",
+    "electron": "^8.2.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^7.0.27",
+    "postcss-import": "^12.0.1",
+    "rollup": "^2.3.1",
+    "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-generate-html-template": "^1.6.1",
+    "rollup-plugin-livereload": "^1.1.0",
+    "rollup-plugin-postcss": "^2.5.0",
+    "rollup-plugin-svelte": "^5.2.0",
+    "rollup-plugin-terser": "^5.3.0",
+    "sirv-cli": "^0.4.5",
+    "svelte": "^3.20.1",
+    "tailwindcss": "^1.2.0"
   },
-  "dependencies": {
-    "save-dev": "0.0.1-security",
-    "svelte-preprocess": "^3.3.0"
-  },
+  "dependencies": {},
   "scripts": {
     "electron-dev": "run-p dev pure-electron-dev",
     "pure-electron-dev": "cross-env NODE_ENV=development electron .",
@@ -40,5 +38,21 @@
     "dev": "run-p start:dev autobuild",
     "start": "sirv public --single",
     "start:dev": "sirv public --single --dev"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cream-gmbh/cream-dev-svelte-tailwindcss-electron-starter.git"
+  },
+  "keywords": [
+    "Electron",
+    "Svelte",
+    "TailwindCSS",
+    "starter"
+  ],
+  "author": "Vatroslav Vrbanic",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/cream-gmbh/cream-dev-svelte-tailwindcss-electron-starter/issues"
+  },
+  "homepage": "https://github.com/cream-gmbh/cream-dev-svelte-tailwindcss-electron-starter"
 }
